linux/driver/tmp/3.13.11-ckt15/block_ops_release_returns_int.log
+ gcc -Os -isystem /lib/modules/3.13.11-ckt15/build/include -isystem /lib/modules/3.13.11-ckt15/build/include/uapi -isystem /lib/modules/3.13.11-ckt15//source/arch/x86/include/generated -I /lib/modules/3.13.11-ckt15//source/arch/x86/include -I /lib/modules/3.13.11-ckt15//source/include -Wall -Werror -Werror-implicit-function-declaration -fno-strict-aliasing -include generated/autoconf.h -o tmp/3.13.11-ckt15/block_ops_release_returns_int.E.c -E /home/sgosali/Documents/Work/RHEL6xFLASH/linux/driver/../kabi/tests/block_ops_release_returns_int.c
+ gcc -Os -isystem /lib/modules/3.13.11-ckt15/build/include -isystem /lib/modules/3.13.11-ckt15/build/include/uapi -isystem /lib/modules/3.13.11-ckt15//source/arch/x86/include/generated -I /lib/modules/3.13.11-ckt15//source/arch/x86/include -I /lib/modules/3.13.11-ckt15//source/include -Wall -Werror -Werror-implicit-function-declaration -fno-strict-aliasing -include generated/autoconf.h -o tmp/3.13.11-ckt15/block_ops_release_returns_int.o -c /home/sgosali/Documents/Work/RHEL6xFLASH/linux/driver/../kabi/tests/block_ops_release_returns_int.c
/home/sgosali/Documents/Work/RHEL6xFLASH/linux/driver/../kabi/tests/block_ops_release_returns_int.c:15:2: error: initialization from incompatible pointer type [-Werror]
  .release = block_ops_release,
  ^
/home/sgosali/Documents/Work/RHEL6xFLASH/linux/driver/../kabi/tests/block_ops_release_returns_int.c:15:2: error: (near initialization for ‘foo.release’) [-Werror]
cc1: all warnings being treated as errors
